kubedeploy/eks/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  type: LoadBalancer
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
    - name: "5001"
      port: 5001
      targetPort: 5001
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: app
