kubedeploy/eks/flask_app-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: flask-app
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/flask_app: "true"
  podSelector:
    matchLabels:
      io.kompose.network/flask_app: "true"
